--- a/index.html
+++ b/index.html
@@ -154,7 +154,6 @@
                 font-family: Montserrat;
                 font-size: clamp(1rem, 1.4vw, 4.5rem);
                 line-height:1.37;
-                clear: both;
             }
             .introTitle{
                 position: relative;
@@ -171,7 +170,7 @@
             .Mission{
                 position: relative;
                 float: left;
-                left: 2.7%;
+                left: 5%;
                 top: -0.2%;
                 width: 43%;
                 padding: 1%;
@@ -190,8 +189,8 @@
             #EnvironmentalPhoto{
                 position: relative;
                 float: left;
-                left: -1%;
-                top: 10%;
+                left: 5%;
+                top: .9%;
                 width: 20%;
                 padding: 4%;
                 clear: both;
