--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
             .Mission{
                 position: relative;
                 float: left;
-                left: 5%;
+                left: 9%;
                 top: -0.2%;
                 width: 43%;
                 padding: 1%;
@@ -189,10 +189,10 @@
             #EnvironmentalPhoto{
                 position: relative;
                 float: left;
-                left: 5%;
+                left: 9%;
                 top: .9%;
                 width: 20%;
-                padding: 4%;
+                margin: 4%;
                 clear: both;
                 border: 9px solid #555;
             }
