--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
                 position: relative;
                 float: left;
                 left: 12%;
-                top: 2.5%;
+                top: 3%;
                 width: 43%;
                 padding: 1%;
                 font-family: Montserrat;
@@ -190,24 +190,24 @@
                 position: relative;
                 float: left;
                 left: 8%;
-                top: 1.8%;
+                top: 3.8%;
                 width: 20%;
                 margin: 4%;
                 clear: both;
                 border: 8px solid #000000;
             }
-            @media only screen and (max-width: 920px) {
+            @media only screen and (max-width: 767px) {
                 #halftone {
                     display: none;
                 }
                 .introduction{
                     width: 100%;
                 }
-                .BannerButtons{
+                .BannerButtons, .LeafOne, .LeafTwo, .LeafThree{
                     display: none;
                 }
             }
-            @media only screen and (min-width: 921px) {
+            @media only screen and (min-width: 768px) {
                 .dropdown{
                    display: none;
                 }
