--- a/index.html
+++ b/index.html
@@ -196,6 +196,11 @@
                 clear: both;
                 border: 8px solid #000000;
             }
+            .rectangle{
+                background-color: #eef7eaff;
+                height: 1.5vh;
+                width: 100vw;
+            }
             @media only screen and (max-width: 920px) {
                 #halftone {
                     display: none;
@@ -248,6 +253,7 @@
                 home for both residents of Saratoga and California as a whole.
             </p>
         </div>
+        <div class = "rectangle"></div>
         <script>
             <!--JQuery imported because convenient-->
             $(document).ready(function(){
