--- a/index.html
+++ b/index.html
@@ -198,8 +198,11 @@
             }
             .rectangle{
                 background-color: #eef7eaff;
-                height: 1.5vh;
+                height: 4.2vh;
                 width: 100vw;
+                margin: 8%;
+                position: relative;
+                clear: both;
             }
             @media only screen and (max-width: 920px) {
                 #halftone {
