--- a/index.html
+++ b/index.html
@@ -198,11 +198,11 @@
             }
             .rectangle{
                 background-color: #eef7eaff;
-                height: 4.2vh;
+                height: 4.4vh;
                 width: 100vw;
-                margin: 8%;
-                position: relative;
-                clear: both;
+                position: absolute;
+                top: 40vh;
+                left: 0vw;
             }
             @media only screen and (max-width: 920px) {
                 #halftone {
