--- a/index.html
+++ b/index.html
@@ -200,9 +200,11 @@
                 background-color: #eef7eaff;
                 height: 4.41vh;
                 width: 100vw;
-                position: absolute;
-                top: 110vh;
-                left: 0vw;
+                position: relative;
+                top: 1vh;
+                right: 0vw;
+                float: right;
+                clear: both;
             }
             @media only screen and (max-width: 920px) {
                 #halftone {
