--- a/index.html
+++ b/index.html
@@ -178,6 +178,7 @@
                 font-size: clamp(1rem, 1.4vw, 4.5rem);
                 line-height:1.37;
                 text-align: left;
+                margin-bottom: 30%;
             }
             .MissionStatement{
                 position: relative;
