--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
                 position: relative;
                 float: left;
                 left: 6%;
-                top: 6%;
+                top: 5%;
                 width: 32%;
                 margin: 4%;
                 clear: both;
@@ -202,7 +202,8 @@
                 height: 4.41vh;
                 width: 100vw;
                 position: relative;
-                top: 0vh;
+                margin-top: 5%;
+                margin-bottom: 5%;
                 right: 0vw;
                 float: right;
                 clear: both;
