--- a/index.html
+++ b/index.html
@@ -208,6 +208,13 @@
                 float: right;
                 clear: both;
             }
+            #Involvement{
+                position: relative;
+                font-size: clamp(2.17rem, 2.9vw, 8.4rem);
+                font-weight: 400;
+                text-align: center;
+                clear: both;
+            }
             @media only screen and (max-width: 920px) {
                 #halftone {
                     display: none;
@@ -260,6 +267,7 @@
                 home for both residents of Saratoga and California as a whole.
             </p>
         </div>
+        <h2 id = "Involvement">Involvement</h2>
         <div class = "rectangle"></div>
         <script>
             <!--JQuery imported because convenient-->
