--- a/index.html
+++ b/index.html
@@ -211,9 +211,9 @@
             #Involvement{
                 position: relative;
                 font-size: clamp(2.17rem, 2.9vw, 8.4rem);
+                font-family: Montserrat;
                 font-weight: 400;
                 text-align: center;
-                clear: both;
             }
             @media only screen and (max-width: 920px) {
                 #halftone {
