--- a/index.html
+++ b/index.html
@@ -210,10 +210,13 @@
             }
             #Involvement{
                 position: relative;
+                width: 2.8vw;
                 font-size: clamp(2.17rem, 2.9vw, 8.4rem);
                 font-family: Montserrat;
                 font-weight: 400;
                 text-align: center;
+                clear:both;
+                margin: 1px;
             }
             @media only screen and (max-width: 920px) {
                 #halftone {
