--- a/index.html
+++ b/index.html
@@ -216,8 +216,13 @@
                 text-align: center;
                 clear:both;
                 width:100vw;
-                top: 8%;
                 margin: 1px;
+            }
+            .TallBird{
+                position: relative;
+                text-align: center;
+                float: left;
+                width:21vw;
             }
             @media only screen and (max-width: 920px) {
                 #halftone {
@@ -271,8 +276,8 @@
                 home for both residents of Saratoga and California as a whole.
             </p>
         </div>
-        <h2 id = "Involvement">Involvement</h2>
         <div class = "rectangle"></div>
+        <h2 id = "Involvement">Involvement</h2>
         <script>
             <!--JQuery imported because convenient-->
             $(document).ready(function(){
