--- a/index.html
+++ b/index.html
@@ -278,6 +278,7 @@
         </div>
         <div class = "rectangle"></div>
         <h2 id = "Involvement">Involvement</h2>
+        <img id = "TallBird" src = "images/tallbird.png">
         <script>
             <!--JQuery imported because convenient-->
             $(document).ready(function(){
