--- a/index.html
+++ b/index.html
@@ -293,6 +293,8 @@
         <div class = "rectangle"></div>
         <h2 id = "Involvement">Involvement</h2>
         <img class = "GreenElements TallBird" src = "images/tallbird.png">
+        <img class = "GreenElements SpeechBubble" src = "images/SpeechBubble.PNG">
+        <img class = "GreenElements Goggles" src = "images/tinygoggles.svg">
         <script>
             <!--JQuery imported because convenient-->
             $(document).ready(function(){
