--- a/index.html
+++ b/index.html
@@ -223,17 +223,17 @@
                 top:2%;
                 margin-bottom:0.2%;
             }
-            #TallBird{
+            .TallBird{
                 left: 50%;
                 transform: translateX(-50%);
                 width:14.92vw;
             }
-            #SpeechBubble{
+            .SpeechBubble{
                 left:12%;
                 transform: translateX(-38%);
                 width:15vw;
             }
-            #Goggles{
+            .Goggles{
                 right:12%;
                 transform: translateX(38%);
                 width:13vw;
