--- a/index.html
+++ b/index.html
@@ -230,9 +230,10 @@
             }
             .SpeechBubble{
                 left:12%;
-                width:15vw;
+                width:16vw;
             }
             .Goggles{
+                top:1.1%:
                 right:12%;
                 width:20vw;
             }
