--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
             }
             .TransparencyGradients{
                 background: rgb(0,0,0);
-                background: linear-gradient(0deg, rgba(0,0,0,0.5130427170868348) 7%, rgba(0,0,0,0.33657212885154064) 31%, rgba(255,255,255,0) 84%);
+                background: linear-gradient(0deg, rgba(0,0,0,0.21) 7%, rgba(0,0,0,0.14) 31%, rgba(255,255,255,0) 84%);
                 height:4vh;
                 width:15vw;
                 position:absolute;
