--- a/index.html
+++ b/index.html
@@ -239,6 +239,7 @@
             }
             .TransparentBoxes{
                 background-color:rgba(120,120,120,0.2);
+                color: #fff;
                 height: 25vh;
                 width: 19vw;
                 position: relative;
@@ -326,13 +327,13 @@
         <img class = "GreenElements TallBird" src = "images/tallbird.png">
         <img class = "GreenElements SpeechBubble" src = "images/SpeechBubble.PNG">
         <img class = "GreenElements Goggles" src = "images/tinygoggles.svg">
-        <div class = "transparentBoxes box1">
+        <div class = "TransparentBoxes box1">
             <div class = "TransparencyGradients gradient1"></div>
         </div>
-        <div class = "transparentBoxes box2">
+        <div class = "TransparentBoxes box2">
             <div class = "TransparencyGradients gradient2"></div>
         </div>
-        <div class = "transparentBoxes box3">
+        <div class = "TransparentBoxes box3">
             <div class = "TransparencyGradients gradient3"></div>
         </div>
         <script>
