--- a/index.html
+++ b/index.html
@@ -260,8 +260,9 @@
                 position: relative;
                 margin-top: 0.1%;
                 margin-bottom: 1.1%;
-                margin-left:0%;
+                margin-left:14.33333%;
                 margin-right:0%;
+                float:left;
             }
             .box1{
                 left:18%;
