--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
                 margin-bottom: 1.1%;
                 margin-left:14.33333%;
                 margin-right:0%;
-                float:left;
+                display: inline-block;
             }
             .box1{
                 left:18%;
@@ -347,9 +347,6 @@
         </div>
         <div class = "rectangle"></div>
         <h2 id = "Involvement">Involvement</h2>
-        <img class = "GreenElements TallBird" src = "images/tallbird.png">
-        <img class = "GreenElements SpeechBubble" src = "images/SpeechBubble.PNG">
-        <img class = "GreenElements Goggles" src = "images/tinygoggles.svg">
         <div class = "TransparentBoxes box1">
             <div class = "TransparencyGradients gradient1"></div>
         </div>
@@ -359,6 +356,9 @@
         <div class = "TransparentBoxes box3">
             <div class = "TransparencyGradients gradient3"></div>
         </div>
+        <img class = "GreenElements TallBird" src = "images/tallbird.png">
+        <img class = "GreenElements SpeechBubble" src = "images/SpeechBubble.PNG">
+        <img class = "GreenElements Goggles" src = "images/tinygoggles.svg">
         <script>
             <!--JQuery imported because convenient-->
             $(document).ready(function(){
