--- a/index.html
+++ b/index.html
@@ -382,6 +382,10 @@
                 x.css("display", "block");
               }
             }
+            var scale = 'scale(1)';
+            document.body.style.webkitTransform =  scale;   
+            document.body.style.msTransform =   scale;       
+            document.body.style.transform = scale; 
         </script>
         <button class="BannerButtons ArticlesButton">Articles
         </button>
