--- a/index.html
+++ b/index.html
@@ -282,10 +282,13 @@
                 position:absolute;
                 margins:0px;
             .gradient1{
+                top:50%;
             }
             .gradient2{
+                top:50%;
             }
             .gradient3{
+                top:50%;
             }
             @media screen and (max-width: 920px) {
                 #halftone, .BannerButtons, .CustomLeaf{
