--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                 margin 0 auto;
                 max-width: 100%;
                 max-height: 100%;
-            }
+            }/*
             .dropdown {
               overflow: hidden;
               background-color: #333;
@@ -92,7 +92,7 @@
             .active {
               background-color: #FFF;
               color: white;
-            }
+            }*/
             .BannerButtons{
                 position: absolute;
                 border-radius: 9px;
@@ -365,6 +365,15 @@
                 <div class = "TransparencyGradients gradient3"></div>
             </div>
         </div>
+        <button class="BannerButtons ArticlesButton">Articles
+        </button>
+        <button class="BannerButtons CampaignsButton">Campaigns
+        </button>
+        <button class="BannerButtons AboutUsButton">About Us
+        </button>
+        <img class = "CustomLeaf LeafOne"/>
+        <img class = "CustomLeaf LeafTwo"/>
+        <img class = "CustomLeaf LeafThree"/>
         <script>
             <!--JQuery imported because convenient-->
             $(document).ready(function(){
@@ -379,7 +388,7 @@
                 if(e.key.startsWith("Arrow")) {
                     e.preventDefault();
                 }
-            }, false);
+            }, false);/*
             function dropdown() {
                  var x = $("#myLinks");
                 if (x.is(":visible")) {
@@ -387,16 +396,7 @@
                 } else {
                     x.show();
                 }
-            }
+            }*/
         </script>
-        <button class="BannerButtons ArticlesButton">Articles
-        </button>
-        <button class="BannerButtons CampaignsButton">Campaigns
-        </button>
-        <button class="BannerButtons AboutUsButton">About Us
-        </button>
-        <img class = "CustomLeaf LeafOne"/>
-        <img class = "CustomLeaf LeafTwo"/>
-        <img class = "CustomLeaf LeafThree"/>
     </body>
 </html>
