--- a/index.html
+++ b/index.html
@@ -311,7 +311,8 @@
     <body style="background-color:White;">
         <img id = "TopBanner" src="images/TopBanner.png">
         <img id = "halftone" src="images/halftone.svg">
-        /*<div class="dropdown">
+        /*
+        <div class="dropdown">
           <div id="myLinks">
             <a href="#articles">News</a>
             <a href="#campaigns">Contact</a>
@@ -320,7 +321,8 @@
           <a href="javascript:void(0);" class="icon" onclick="dropdown()">
             <i class="fa fa-bars"></i>
           </a>
-        </div>*/
+        </div>
+        */
         <a href="https://li21rich.github.io/SHSEnvironmentalAction/">
             <div class="logoBox">
                 <img src="images/birdgreen.svg" alt="Environmental Action Club Logo">
