--- a/index.html
+++ b/index.html
@@ -28,6 +28,24 @@
             a {
               color: inherit;
             }
+            .dropdown {
+              overflow: hidden;
+              position: relative;
+            }
+            .dropdown #myLinks {
+              display: none;
+            }
+            .dropdown icon {
+              background: black;
+              display: block;
+              position: absolute;
+              right: 0px;
+              top: 0px;
+            }
+            .active {
+              background-color: #FFF;
+              color: white;
+            }
             #referencePoint{
                 position: absolute;
                 top: 0px;
@@ -76,25 +94,6 @@
                 margin 0 auto;
                 max-width: 100%;
                 max-height: 100%;
-            }
-            .dropdown {
-              overflow: hidden;
-              background-color: #333;
-              position: relative;
-            }
-            .dropdown #myLinks {
-              display: none;
-            }
-            .dropdown icon {
-              background: black;
-              display: block;
-              position: absolute;
-              right: 0;
-              top: 0;
-            }
-            .active {
-              background-color: #FFF;
-              color: white;
             }
             .BannerButtons{
                 position: absolute;
