--- a/index.html
+++ b/index.html
@@ -28,14 +28,14 @@
             a {
               color: inherit;
             }
-            .dropdown icon {
+            a.icon {
               background: black;
               display: block;
               position: absolute;
               right: 0px;
               top: 0px;
             }
-            .dropdown #myLinks {
+            #myLinks {
               display: none;
             }
             .active {
