--- a/index.html
+++ b/index.html
@@ -25,18 +25,23 @@
                 font-size: 100%;
                 margin: 0;
             }    
-            a {
-              color: inherit;
-            }
-            a.icon {
-              background: black;
-              display: block;
-              position: absolute;
-              right: 0px;
-              top: 0px;
-            }
             #myLinks {
               display: none;
+            }
+            a {
+              color: black;
+              padding: 1%;
+              text-decoration: none;
+              font-size:1rem;
+              display: block;
+            }
+            a.icon {
+              background: white;
+              display: block;
+              position: absolute;
+              font-size:1.7rem;
+              right: 0;
+              top: 0;
             }
             .active {
               background-color: #FFF;
