--- a/index.html
+++ b/index.html
@@ -25,7 +25,12 @@
                 font-size: 100%;
                 margin: 0;
             }    
-            #myLinks {
+            a:-webkit-any-link {
+                color: inherit !important;
+                text-decoration: none !important;
+                display: inherit;
+            }
+            .LinksMenu {
                 position: absolute;
                 display: none;
                 padding: 1%;
@@ -293,7 +298,7 @@
                 top:50%;
             }
             @media screen and (min-width: 921px) {
-                #myLinks, .icon {
+                .LinksMenu, .icon {
                    display: none;
                 }
             }
@@ -312,7 +317,7 @@
     <body style="background-color:White;">
         <img id = "TopBanner" src="images/TopBanner.png">
         <img id = "halftone" src="images/halftone.svg">
-        <div id="myLinks">
+        <div class="LinksMenu">
             <a href="#articles">News</a>
             <a href="#campaigns">Contact</a>
             <a href="#about">About Us</a>
@@ -389,7 +394,7 @@
                 }
             }, false);
             function dropdown() {
-                var x = $("#myLinks");
+                var x = $(".LinksMenu");
                 if (x.is(":visible")) {
                     x.hide();
                 } else {
