--- a/index.html
+++ b/index.html
@@ -25,20 +25,20 @@
                 font-size: 100%;
                 margin: 0;
             }    
-            a:-webkit-any-link {
-                color: inherit !important;
-                text-decoration: none !important;
-            }
             .icon {
                 color: #F5F5EF !important;
-                padding-top: 5%;
+                padding-top: 5.4%;
                 padding-right: 3%;
                 display: block;
                 position: absolute;
-                font-size:4rem;
+                font-size:3.5rem;
                 right: 0;
                 top: 0;
-                z-index:1;
+                z-index:3;
+            }
+            a:-webkit-any-link:not(.icon) {
+                color: inherit !important;
+                text-decoration: none !important;
             }
             .LinksMenu {
                 position: absolute;
