--- a/index.html
+++ b/index.html
@@ -45,21 +45,21 @@
                 position: absolute;
                 right: 0px;
                 top: 1vh;
-                width: 40vw;
+                width: 50vw;
                 padding: 0%;
                 display: block;
                 display: none;
                 text-decoration: none;
                 font-family: Montserrat;
-                font-weight: bold;
+                font-weight: 400;
                 line-height:1.6;
-                font-size:2.3rem;
+                font-size:2rem;
                 background-color: #37512cff;
                 color: #F5F5EF;
                 z-index: 3;
             }
-            #about, #campaigns, #articles{
-                padding-left: 4%;
+            .LinksMenu a:hover{
+                background-color: #348138;
             }
             #referencePoint{
                 position: absolute;
@@ -326,9 +326,9 @@
         <img id = "TopBanner" src="images/TopBanner.png">
         <img id = "halftone" src="images/halftone.svg">
         <div class="LinksMenu">
-            <a href="#articles">News</a>
-            <a href="#campaigns">Contact</a>
-            <a href="#about">About Us</a>
+            <a href="#articles" style="padding-left: 12%;">Articles</a>
+            <a href="#campaigns" style="padding-left: 12%;">Campaign</a>
+            <a href="#about" style="padding-left: 12%;">About Us</a>
         </div>
         <a href="javascript:void(0);" class="icon" onclick="dropdown()">
             <i class="fa fa-bars"></i>
