--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
             }    
             .icon {
                 color: #F5F5EF !important;
-                padding-top: 5.4%;
-                padding-right: 3%;
+                padding-top: 5.4vw;
+                padding-right: 3vw;
                 display: block;
                 position: absolute;
                 font-size:3.5rem;
@@ -44,9 +44,10 @@
             .LinksMenu {
                 position: absolute;
                 right: 0px;
-                top: 1vh;
+                top: 2.4vw;
                 width: 50vw;
-                padding: 0%;
+                padding-top: 2%;
+                padding-bottom:2%;
                 display: block;
                 display: none;
                 text-decoration: none;
@@ -326,6 +327,7 @@
         <img id = "TopBanner" src="images/TopBanner.png">
         <img id = "halftone" src="images/halftone.svg">
         <div class="LinksMenu">
+            <br>
             <a href="#articles" style="padding-left: 12%;">Articles</a>
             <a href="#campaigns" style="padding-left: 12%;">Campaign</a>
             <a href="#about" style="padding-left: 12%;">About Us</a>
