--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 font-weight: 400;
                 line-height:1.6;
                 font-size:2rem;
-                background-color: #37512cff;
+                background-color: #2C4025;
                 color: #F5F5EF;
                 z-index: 3;
             }
