--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             .LinksMenu {
                 position: absolute;
                 right: 0px;
-                top: 2.4vw;
+                top: 4vh;
                 width: 50vw;
                 padding-top: 2%;
                 padding-bottom:2%;
@@ -409,6 +409,7 @@
                     x.hide();
                 } else {
                     x.show();
+                    $(".icon").css("background-color", "black");
                 }
             }
             function checkWindowWidth() {
