--- a/index.html
+++ b/index.html
@@ -27,8 +27,9 @@
             }    
             .icon {
                 color: #F5F5EF !important;
-                padding-top: 5.4vw;
-                padding-right: 3vw;
+                margin-top: 4.4vw;
+                margin-right: 2vw;
+                padding: 1vw;
                 display: block;
                 position: absolute;
                 font-size:3.5rem;
@@ -44,7 +45,7 @@
             .LinksMenu {
                 position: absolute;
                 right: 0px;
-                top: 4vh;
+                top: 11vh;
                 width: 50vw;
                 padding-top: 2%;
                 padding-bottom:2%;
